# torch_pyo3_toolkit_template

./: .envrc  .gitignore  README.md  devenv.local.nix  flake.nix  justfile  pyproject.toml  python.nix  rust.nix
devenv/: default.nix  git-hooks.nix  python.nix  rust.nix
rust-plugin/: Cargo.toml  pyproject.toml
rust-plugin/src/: lib.rs
