[tool.poetry]
name = "circ-synthesis-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["gjz010 <gjz010944@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.5.1+rocm6.2", source = "torch-rocm"}
torchaudio = {version = "^2.5.1+rocm6.2", source = "torch-rocm"}
torchvision = {version = "^0.20.1+rocm6.2", source = "torch-rocm"}
matplotlib = "^3.9.2"
numpy = "^2.1.3"
ipykernel = "^6.29.5"
gymnasium = {extras = ["box2d"], version = "^1.0.0"}
swig = "^4.2.1.post0"
maturin = "^1.7.4"
pyqt6 = "^6.7.1"
pycairo = "^1.27.0"
pygobject = "^3.50.0"
stable-baselines3 = {extras = ["extra"], version = "^2.4.0"}
copier = "^9.4.1"
ipywidgets = "^8.1.5"
[[tool.poetry.source]]
name = "torch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
priority = "supplemental"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
