[project]
name = "torch_pyo3_toolkit_template"
version = "0.1.0"
description = ""
authors = [{ name = "gjz010", email = "gjz010944@gmail.com" }]
readme = "README.md"
requires-python = "<4.0,>=3.12"

dependencies = [
    "matplotlib<4.0.0,>=3.9.2",
    "numpy<3.0.0,>=2.1.3",
    "ipykernel<7.0.0,>=6.29.5",
    "gymnasium[box2d]>=1.0.0,<2.0.0",
    "swig<5.0.0.0,>=4.2.1.post0",
    "maturin<2.0.0,>=1.7.4",
    "pyqt6<7.0.0,>=6.7.1",
    "pycairo<2.0.0,>=1.27.0",
    "pygobject<4.0.0,>=3.50.0",
    "stable-baselines3[extra]==2.5.0a1",
    "copier<10.0.0,>=9.4.1",
    "ipywidgets<9.0.0,>=8.1.5",
    "pydantic<3.0.0,>=2.10.2",
    "pylatexenc<3.0,>=2.10",
    "safetensors<1.0.0,>=0.4.5",
    "mypy<2.0.0,>=1.11.2",
    "flake8<7.0.0,>=6.1.0",
    "black<25.0.0,>=24.8.0",
    "pyo3-stubgen<1.0.0,>=0.3.0",
    "torchviz2<1.0.0,>=0.0.2",
    "fsspec==2024.3.1",
    "nbstripout<1.0.0,>=0.8.1",
    "gymnasium-robotics<2.0.0,>=1.3.1",
    "pytest<9.0.0,>=8.3.4",
    "numpydantic<2.0.0,>=1.6.6",
    "ipykernel==6.29.5",
    "notebook==7.3.2",
]

[tool.poetry.dependencies]
python = "^3.11"
torch = { version = "^2.5.1+rocm6.2", source = "torch-rocm" }
torchaudio = { version = "^2.5.1+rocm6.2", source = "torch-rocm" }
torchvision = { version = "^0.20.1+rocm6.2", source = "torch-rocm" }
matplotlib = "^3.9.2"
numpy = "^2.1.3"
ipykernel = "^6.29.5"
gymnasium = { extras = ["box2d"], version = "^1.0.0" }
swig = "^4.2.1.post0"
maturin = "^1.7.4"
pyqt6 = "^6.7.1"
pycairo = "^1.27.0"
pygobject = "^3.50.0"
stable-baselines3 = { extras = ["extra"], version = "^2.4.0" }
copier = "^9.4.1"
ipywidgets = "^8.1.5"


[project.optional-dependencies]
rocm = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "pytorch-triton-rocm==3.1.0",
]
cuda = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "pytorch-triton==3.0.0",
]
cpu = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "pytorch-triton==3.0.0",
]

[tool.uv]
package = false
conflicts = [[{ extra = "cuda" }, { extra = "cpu" }, { extra = "rocm" }]]
[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cuda", extra = "cuda" },
    { index = "torch-rocm", extra = "rocm" },
]
torchvision = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cuda", extra = "cuda" },
    { index = "torch-rocm", extra = "rocm" },
]
torchaudio = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cuda", extra = "cuda" },
    { index = "torch-rocm", extra = "rocm" },
]

# tool.uv.sources.<package-name>[number].index does not propagate.
# https://github.com/astral-sh/uv/issues/8253
pytorch-triton-rocm = [{ index = "torch-rocm", extra = "rocm" }]
pytorch-triton = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cuda", extra = "cuda" },
]

# Example for using GitHub packages
# gymnasium = { git = "https://github.com/Farama-Foundation/Gymnasium", rev = "5bc344e03ae457712b49bf06c20a313b6b1accc4" }


[[tool.uv.index]]
name = "torch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.mypy]
enable_error_code = "possibly-undefined"
disable_error_code = ["import-untyped", "var-annotated"]

[tool.black]
line-length = 79


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
