[package]
name = "rust-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
ndarray = "0.16.1"
num = "0.4.3"
numpy = "0.22.1"
pyo3 = {version  = "0.22.0", features = ["num-complex"]}
rand = "0.8.5"
